updated intro paragraph; removed Wordpress blog link, "coded with love" text, and Google Analytics

--- a/app/index.html
+++ b/app/index.html
@@ -58,7 +58,7 @@
 				
 				<p>A true form-follows-function girl, I develop clean, simple solutions that speak across boundaries. My favorite projects center around a strong brand identity, especially those with multicultural and multilingual aspects.</p>
 
-				<p>In 2014, I shifted my focus from design to development. This year, I want to help others join the tech community; you can follow along on my <a href="https://whitneyeliz.wordpress.com/" target="_blank">blog</a>, catch me on <a href="https://twitter.com/whitneyhacks" target="_blank">Twitter</a>, or see me <a href="#speak">speak</a>.</p>
+				<p>In 2014, I shifted my focus from design to development. This year, I want to help others join the tech community; you can catch me on <a href="https://twitter.com/whitneyhacks" target="_blank">Twitter</a>, or see me <a href="#speak">speak</a>.</p>
 
 				<p>When I'm not coding, I enjoy strong coffee, good books, and international travel. You'll often find me chattering about my time in Germany.</p>
 			</div>		
@@ -300,30 +300,17 @@
 					<hr>
 					<a href="https://github.com/wweliz" target="_blank"> <img src="images/github-logo.svg" alt="GitHub logo" height="24px" width="24px" class="icon"> </a>
 					<a href="https://twitter.com/whitneyhacks" target="_blank"> <img src="images/twitter-logo.svg" alt="Twitter logo" height="24px" width="24px" class="icon"> </a>
-					<a href="https://whitneyeliz.wordpress.com/" target="_blank"> <img src="images/wordpress-logo.svg" alt="WordPress logo" height="24px" width="24px" class="icon"> </a>
 				</div>
 
 				<div class="medium-4 columns impressum">
 					<h5>IMPRESSUM</h5>
 					<hr>
-					<p>&copy; <script type="text/javascript">document.write(new Date().getFullYear());</script> Whitney Williams<br>
-						Coded with <span class="heart">♥</span> in Greenville, SC.
-					</p>
+					<p>&copy; <script type="text/javascript">document.write(new Date().getFullYear());</script> Whitney Williams</p>
 					<p>Typeset in Lato and Fredericka the Great, powered by Google Fonts.</p>
 				</div>
 
 			</div>
 		</div>
-
-			<!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-			<script>
-					(function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-							function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-					e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-					e.src='//www.google-analytics.com/analytics.js';
-					r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-					ga('create','UA-XXXXX-X');ga('send','pageview');
-			</script>
 
 			<!-- build:js scripts/vendor.js -->
 			<!-- bower:js -->
